# mlx-server-runtime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  skills-lock.json
python/: pyproject.toml  requirements.txt
python/benchmarks/results/: auto_perf_tuning_oneshot_report.md  auto_perf_tuning_report.md
python/mlx_benchmark/: __init__.py  __main__.py  configuration.py  loadgen.py  prompts.py  report.py  runner.py  statistics.py
python/mlx_worker/: __init__.py  batching.py  benchmarking.py  config.py  engine.py  ipc.py  main.py  native_backend_ids.py  vlm_engine.py
python/mlx_worker/native_mlx/: __init__.py  attention.py  bootstrap.py  cache.py  cache_coordinator.py  diagnostics.py  execution_backends.py  executor.py  graph_profile.py  interfaces.py  mapping.py  overlap.py  pipeline_profile.py  prefix_cache.py  registry.py  runtime.py  scheduler.py  trace.py  worker.py
python/mlx_worker/native_mlx/models/: __init__.py  gemma3.py  lfm2.py  qwen2.py  qwen3.py
python/tests/: __init__.py  conftest.py  test_benchmarking.py  test_config.py  test_engine.py  test_ipc.py  test_main.py  test_mlx_benchmark.py  test_native_mlx.py  test_native_mlx_model_families.py  test_native_mlx_overlap.py  test_native_mlx_trace.py  test_phase14_completion.py  test_pipeline_profile.py  test_release_tool.py  test_v2_benchmark.py  test_vlm_benchmark.py  test_vlm_engine.py
python/tests/fixtures/mlx_benchmark/: fake_gateway.py  phase7_benchmark.toml
rust/crates/gateway/: Cargo.toml
rust/crates/gateway/src/: benchmark.rs  cli.rs  command_runner.rs  config.rs  configuration.rs  ipc.rs  (+12 more)
(+102 files in other folders)
