[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-worker"
version = "0.1.0"
description = "Python MLX worker bootstrap for the local runtime"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3,<0.32",
    "mlx-vlm>=0.6.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["mlx_worker"]
