[package]
name = "mlx_runtime_gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mlx-air"
path = "src/bin/mlx_air.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
mlx_runtime_protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"
